[fix] truncate video on top of the page [edit] icon for volunteers

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -3,6 +3,7 @@
 	min-height: 60%;
 	width: 100%;
 	overflow: hidden;
+	margin-top: 20px;
 
 	iframe {
 		width: 100%;
